--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ nav{
    height: 80px;
    width: 100%;
  }
- label.logo{
+ label#logo{
    color: white;
    font-size: 35px;
    line-height: 80px;
@@ -91,6 +91,26 @@ nav{
       height: calc(100vh - 80px);
     }
  } 
+
+.up{
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 40px;
+  right: 50px;
+  text-align: center;
+  text-decoration: none;
+  line-height: 50px;
+  background-color: rgb(236, 198, 127);
+  font-size: 23px;
+  color: rgb(129, 127, 127);
+  border-radius: 50%;
+}
+
+.up:hover{
+  background-color: orange;
+  color: black;
+}
 
 #animals{
   font-size: 90px;
