--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ ul {
   border-radius: 10px;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 640px) {
   .navbar {
       flex-direction: column;
       align-items: flex-start;
@@ -205,17 +205,17 @@ div.long img{
 }
 
 /* start of desktop styles */
-
+/* 
 @media screen and (max-width: 991px) {
-   /* start of large tablet styles */
+    start of large tablet styles 
 
    
 }
    
 @media screen and (max-width: 767px) {
-   /* start of medium tablet styles */
+    start of medium tablet styles 
    
-}
+} */
    
 @media screen and (max-width: 479px) {
    /* start of phone styles */
@@ -277,4 +277,8 @@ h1.objects{
  .gallery{
    width: 92%;
  }
+}
+
+@media(max-width:367){
+  
 }
